--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Maor Websit</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -22,7 +22,8 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Clarence Taylor</span>
+            <span class="d-block d-lg-none">Maor Florentin</span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle" src="assets/img/profile.jpeg" alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -43,28 +44,20 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
-                    ashwal
-                    <span class="text-primary">ron</span>
+                    Florentin
+                    <span class="text-primary">Maor</span>
                 </h1>
                 <div class="subheading mb-5">
-                    Ra'anana, israel · +972 053-281-7248 ·
-                    <a href="mailto:name@email.com">Ashwal200@gmail.com</a>
+                    Ariel, israel · +972 505354288 ·
+                    <a href="mailto:name@email.com">Maor199724@gmail.com</a>
                 </div>
-                <p class="lead mb-5">Tech-savvy and quick learner with a creative mindset, always seeking new
-                    challenges. Passionate about innovation and continuous learning. Eager to contribute as a software
-                    engineer with hard work and attention to detail, ready to create meaningful solutions.</p>
+                <p class="lead mb-5">A third-year Computer Science student at Ariel University, passionate about leveraging knowledge and skills in a junior role as a Full Stack Developer. 
+                    Demonstrates a strong commitment to self-learning, coupled with exceptional communication skills. Thrives on technology challenges and values collaborative teamwork, making a significant contribution to any work environment.</p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/ron-ashwal-275602244/"><i
+                    <a class="social-icon" href="https://www.linkedin.com/in/maor-saadon-/"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/Ashwal200"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://github.com/maorsaadon"><i class="fab fa-github"></i></a>
                 </div>
-            </div>
-            <div class="col-lg-4">
-                <!-- Image container -->
-                <span class="d-none d-lg-block profile-img-container">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg"
-                        alt="Profile Image" />
-                </span>
             </div>
         </section>
         <hr class="m-0" />
@@ -77,16 +70,17 @@
                         <h3 class="mb-0">Ariel University</h3>
                         <div class="subheading mb-3">Bachelor of Science</div>
                         <div>Computer Science and Mathematics</div>
-                        <p>GPA: 85</p>
+                        <p>GPA: 87</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">October 2022 - August 2024</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Lapid High School</h3>
-                        <div class="subheading mb-3">Technology Program</div>
+                        <h3 class="mb-0">Branco wiess High School</h3>
+                        <div class="subheading mb-3">Graduated with distinction</div> 
+                        <div class="subheading mb-3">C# young programmers course</div> 
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Semptember 2012 - August 2016</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">Semptember 2011 - August 2015</span></div>
                 </div>
             </div>
         </section>
