--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Maor Florentin</span>
-            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle" src="assets/img/profile.jpeg" alt="..." /></span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -51,8 +51,9 @@
                     Ariel, israel · +972 505354288 ·
                     <a href="mailto:name@email.com">Maor199724@gmail.com</a>
                 </div>
-                <p class="lead mb-5">A third-year Computer Science student at Ariel University, passionate about leveraging knowledge and skills in a junior role as a Full Stack Developer. 
-                    Demonstrates a strong commitment to self-learning, coupled with exceptional communication skills. Thrives on technology challenges and values collaborative teamwork, making a significant contribution to any work environment.</p>
+                <p class="lead mb-5">
+                    Recently graduated with a Bachelor of Science in Computer Science from Ariel University, I am eager to apply my knowledge and skills in a full-time role as a Full Stack Developer. My education and projects have equipped me with a solid foundation in both front-end and back-end technologies, and I am passionate about crafting efficient and scalable solutions. Known for my strong commitment to continuous learning and excellent communication skills, I thrive on technology challenges and excel in collaborative environments where I can contribute significantly to team success.
+                </p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/maor-saadon-/"><i
                             class="fab fa-linkedin-in"></i></a>
@@ -144,11 +145,8 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I thrive on exploring the great outdoors. Whether it's surfing,
-                    snowboarding down the slopes, or going for a run, I love staying active and experiencing the beauty
-                    of nature.</p>
-                <p class="mb-0">My fascination with back-end development keeps me engaged, always seeking to innovate
-                    and stay ahead with the latest technologies.
+                <p>Apart from being a web developer, I thrive on exploring the great outdoors. Activities like <strong>going to the gym</strong>, <strong>making homemade candles</strong>, and <strong>running</strong> keep me active and allow me to experience the beauty of nature.</p>
+                <p class="mb-0">My fascination with <strong>back-end development</strong> keeps me engaged, always seeking to innovate and stay ahead with the latest technologies.
             </div>
         </section>
         <hr class="m-0" />
