--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <!-- Awards-->
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
-                <h2 class="mb-5">Awards & Certifications</h2>
+                <h2 class="mb-5">Projects</h2>
                 <!-- Project Container -->
                 <div class="container">
                     <a1 id="projects"></a1>
